--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,8 @@
     <string name="description">Description</string>
     <string name="quantity">Quantity</string>
     <string name="periodicity">Periodicity</string>
-    <string name="good_habit">Good habit</string>
-    <string name="bad_habit">Bad habit</string>
+    <string name="good_habit">Good Habit</string>
+    <string name="bad_habit">Bad Habit</string>
     <string name="edit_habit">Edit Habit</string>
     <string name="new_habit">Create New Habit</string>
     <string name="save">Save</string>
@@ -22,10 +22,11 @@
     <string name="repetition">Repeat: %1$s times in %2$s days</string>
     <string name="good">GOOD</string>
     <string name="bad">BAD</string>
-    <string name="habit_added">New habit added</string>
+    <string name="habit_added">New Habit added</string>
     <string name="habit_deleted">Habit deleted</string>
     <string name="changes_saved">Changes saved</string>
     <string name="api_status">API Status</string>
+    <string name="done">DONE</string>
 
     <string-array name="habitPriority">
         <item>High</item>
